--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,15 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
+    <TextView
+        android:id="@+id/water_anim"
+        app:layout_constraintTop_toBottomOf="@id/toast_utils"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:text="Progress"
+        android:gravity="center"
+        app:layout_constraintLeft_toLeftOf="parent"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
