--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
+    <TextView
+        android:id="@+id/text_to_bitmap"
+        app:layout_constraintTop_toBottomOf="@id/toast_utils"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:text="Text to Bitmap"
+        android:gravity="center"
+        app:layout_constraintLeft_toLeftOf="parent"
+        />
+
     <TextView
         android:id="@+id/toast_utils"
         android:layout_width="wrap_content"
@@ -18,7 +29,7 @@
 
     <TextView
         android:id="@+id/water_anim"
-        app:layout_constraintTop_toBottomOf="@id/toast_utils"
+        app:layout_constraintTop_toBottomOf="@id/text_to_bitmap"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:text="Progress"
